// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavbarLink /> renders a selected link 1`] = `
<div>
  <a
    class="makeStyles-link"
    href="/test"
    target=""
  >
    <p
      class="MuiTypography-root makeStyles-link makeStyles-selected MuiTypography-body1"
    >
      label
    </p>
  </a>
</div>
`;

exports[`<NavbarLink /> renders an unselected link 1`] = `
<div>
  <a
    class="makeStyles-link"
    href="/"
    target=""
  >
    <p
      class="MuiTypography-root makeStyles-link false MuiTypography-body1"
    >
      label
    </p>
  </a>
</div>
`;
